# swc

./: .clang-format  .gitignore  COPYING  LICENSE  Makefile  Makefile.am  Makefile.common  README.md  autogen.sh  binding.h  buffer.c  buffer.h  common.mk  compositor.c  compositor.h  config.mk  configure.ac  data.c  data_device.c  data_device.h  data_device_manager.c  data_device_manager.h  drm.c  drm.h  egl.c  egl.h  evdev_device.c  evdev_device.h  event.h  input.c  input.h  input_focus.c  input_focus.h  keyboard.c  keyboard.h  mode.c  mode.h  output.c  pointer.c  pointer.h  (+15 more)
cursor/: convert_font.c  local.mk
example/: local.mk  wm.c
i915/: Makefile.am  batch.c  batch.h  blt.h  bo.c  bo.h  mi.h
intel/: Makefile.am  batch.c  batch.h  blt.h  bo.c  bo.h  mi.h
launch/: Makefile.am  Makefile.local  devmajor-linux.c  devmajor-netbsd.c  devmajor.h  launch.c  local.mk  protocol.c  protocol.h  swc-launch.h
libswc/: Makefile.am  Makefile.local  binding.c  binding.h  bindings.c  bindings.h  buffer.c  buffer.h  compositor.c  compositor.h  compositor_surface.c  compositor_surface.h  cursor_plane.c  cursor_plane.h  cursor_surface.c  cursor_surface.h  data.c  data.h  data_device.c  data_device.h  data_device_manager.c  data_device_manager.h  dmabuf.c  dmabuf.h  drm.c  drm.h  drm_buffer.c  drm_buffer.h  evdev_device.c  evdev_device.h  event.h  framebuffer_plane.c  framebuffer_plane.h  input.c  input.h  input_focus.c  input_focus.h  internal.h  kde_decoration.c  kde_decoration.h  (+72 more)
libswc/wscons/: atKeynames.h  bsd_KbdMap.h
protocol/: Makefile.am  Makefile.local  local.mk  swc.xml  xdg-shell.xml
testwm/: Makefile.am  main.c  shell.c  shell.h  shell_surface.c  shell_surface.h  testwm.c
